--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
-<!--By: Andrew Sargent-->
 <!DOCTYPE html>
 <html lang="en">
+  <meta name="author" content="Andrew Sargent">
+  <link href="style.css" rel="stylesheet">
   <head>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>MuzakMaker</title>
