--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
     <audio controls src="http://www.public.asu.edu/~hyago/GIT337/streamingmedia/successful-performance.mp3" class="mediaPlayer">
     </audio>
   </figure>
-    <p>By: Ricky Bombino <br>
+    <h5>By: Ricky Bombino <br>
 Length: 2:35 minutes <br>
-  BPM (Beats per minute): 105</p>
+  BPM (Beats per minute): 105</h5>
     </section>
     <section id="papaya">
   <h4>Papaya</h4>
@@ -58,9 +58,9 @@ Length: 2:35 minutes <br>
     <audio controls src="http://www.public.asu.edu/~hyago/GIT337/streamingmedia/papaya.mp3"  class="mediaPlayer">>
       </audio>
   </figure>
-    <p>By: Dredstudio<br>
+    <h5>By: Dredstudio<br>
 Length: 2:35 minutes<br>
-BPM (Beats per minute): 104</p>
+BPM (Beats per minute): 104</h5>
   </section>
   <section id="smoothies">
   <h4>Smoothies</h4>
@@ -70,9 +70,9 @@ BPM (Beats per minute): 104</p>
   <audio controls src="http://www.public.asu.edu/~hyago/GIT337/streamingmedia/smoothies.mp3"  class="mediaPlayer">>
   </audio>
   </figure>
-    <p>By: Black Rhomb<br>
+    <h5>By: Black Rhomb<br>
 Length: 2:24 minutes<br>
-  BPM (Beats per minute): 125</p>
+  BPM (Beats per minute): 125</h5>
   </section>
   <section id="aloma">
   <h4>Aloma</h4>
@@ -82,9 +82,9 @@ Length: 2:24 minutes<br>
     <audio controls src="http://www.public.asu.edu/~hyago/GIT337/streamingmedia/aloma.mp3"  class="mediaPlayer">>
     </audio>
     </figure>
-    <p>By: Cali<br>
+    <h5>By: Cali<br>
 Length: 2:47 minutes<br>
-  BPM (Beats per minute): 120</p>
+  BPM (Beats per minute): 120</h5>
   </section>
   <section id="myroad">
   <h4>My Road</h4>
@@ -95,9 +95,9 @@ Length: 2:47 minutes<br>
   </audio>
   </figure>
     
-    <p>By: Nesterouk<br>
+    <h5>By: Nesterouk<br>
 Length: 2:24 minutes<br>
-  BPM (Beats per minute): 84</p>
+  BPM (Beats per minute): 84</h5>
     </section>
     <a href="#"><h5>See all trending songs</h5></a>
       </section> 
