--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </header>
 <nav>
       <ul>
-    <li><a href="http://www.public.asu.edu/~hyago/GIT337/streamingmedia/index.html#smoothJazz" title="Cick here to go to the Smooth Jazz section."><h2>Smooth Jazz</h2></a></li>
+    <li><a href=<h2>Smooth Jazz</h2></a></li>
     <li><a href="http://www.public.asu.edu/~hyago/GIT337/streamingmedia/index.html#trending" title="Click here to find out what's trending."><h2>Trending Songs</h2></a></li>
     <li><a href="http://www.public.asu.edu/~hyago/GIT337/streamingmedia/index.html#continueListening" title="Click here to continue listening to the best music!"><h2>Continue Listening</h2></a></li>
     <li><a href="http://www.public.asu.edu/~hyago/GIT337/streamingmedia/index.html#playlists" title="Click here to check out some playlists curated for you!"><h2>Curated Playlists</h2></a></li>
